--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: ruby
 rvm:
  - "1.8.7"
 
-install: true
+install:
+    - pip install dogesay 
+    - gem install cowsay
 
 script: 
+    - dogesay "python" "pip" "packages"
+    - cowsay "gems"
     - python test.py
     - ruby test.rb
