--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
+
 rvm:
  - "1.8.7"
+ - "2.0.0"
 
 install:
     - sudo pip install pysay
@@ -8,6 +10,9 @@ install:
 
 script: 
     - pysay "pip"
-    - cowsay "gems"
     - python test.py
+    - python --version
+    - python3 --version
+    - cowsay "gems"
     - ruby test.rb
+    - ruby --version
