--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rvm:
 install:
     - pip install --user pysay
     - gem install cowsay
+    - export PATH=$PATH:~/.local/bin/
 
 script: 
     - pysay "pip"
