Just so happened to have a cow lying around

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ install:
     - pip install --user pysay
     - gem install cowsay
     - export PATH=$PATH:~/.local/bin/
+    - wget https://gist.githubusercontent.com/edunham/6ee5b97100bf4b77d3a1/raw/0b211ce0505398767387daf36d4aa85d26e559fb/ferris.cow
 
 script: 
-    - pysay "pip"
+    - pysay -f ferris "pip"
     - python test.py
     - python --version
     - cowsay "gems"
